<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:text="@string/textview2" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:textAlignment="viewStart"
        android:textOn="On"
        android:textOff="Off"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:text="@string/textview3" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="0dp"
        tools:max="100"
        tools:min="0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:text="@string/textview4" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="phone"
        android:EditText = "((###) ###-####"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="129dp"
        android:text="@string/textview6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="155dp"
        android:text="@string/textview7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="182dp"
        android:text="@string/textview8"
        tools:text="Volume:" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="207dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:singleLine="false" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="217dp"
        android:text="@string/textview9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="243dp"
        android:text="@string/textview10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView9"
        android:layout_toEndOf="@+id/textView7"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignBottom="@+id/textView9"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="0dp"
        android:text="@string/textview11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="1dp"
        android:text="TextView" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="331dp"
        android:layout_marginBottom="162dp" />

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/seekBar2"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="133dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignEnd="@+id/textView11"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="52dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView6"
        android:layout_toEndOf="@+id/textView8" />

</RelativeLayout>